Add link and name in footer

--- a/final_project_plus/index.html
+++ b/final_project_plus/index.html
@@ -176,7 +176,7 @@
           </div> -->
         </div>
       </section>
-      <footer class="footer-container"></footer>
+      <footer class="footer-container"><span><a target = 'blank_' href="https://github.com/tinazavr/SheCodes/tree/main/final_project_plus">Open code</a>By Anastasiia Zavorotynska</span></footer>
     </div>
     <script src="src/script.js"></script>
   </body>
