Added links in footer.

--- a/final_project_plus/index.html
+++ b/final_project_plus/index.html
@@ -75,7 +75,8 @@
               </button>
             </div>
             <div class="col-3">
-              <button id="current-location-button"
+              <button
+                id="current-location-button"
                 type="submit"
                 class="btn btn-light search-button shadow-lg p-3 mb-5 bg-body rounded"
               >
@@ -176,7 +177,22 @@
           </div> -->
         </div>
       </section>
-      <footer class="footer-container"><span><a target = 'blank_' href="https://github.com/tinazavr/SheCodes/tree/main/final_project_plus">Open code</a>By Anastasiia Zavorotynska</span></footer>
+      <footer class="footer-container">
+        <span
+          >This project was coded by <a
+            href="https://www.linkedin.com/in/anastasiia-zavorotynska-849972133/"
+            target="blank_"
+            >Anastasiia Zavorotynska </a
+          >and is <a
+            target="blank_"
+            href="https://github.com/tinazavr/SheCodes/tree/main/final_project_plus"
+            >open-sourced on GitHub </a
+          >and 
+          <a href="https://app.netlify.com/" target="blank_"
+            >hosted on Netlify</a
+          ></span
+        >
+      </footer>
     </div>
     <script src="src/script.js"></script>
   </body>
