Added attributes to form elements

--- a/final_project_plus/index.html
+++ b/final_project_plus/index.html
@@ -59,9 +59,10 @@
           <div class="row">
             <div class="mb-3 col-7">
               <input
-                type="text"
+                type="search"
                 class="form-control shadow-lg p-3 mb-5 bg-body rounded"
                 id="city-input"
+                autocomblete='off'
                 aria-describedby="emailHelp"
                 placeholder="The weather in which city you would like to know?"
               />
@@ -69,6 +70,7 @@
             <div class="col-2 searct-button">
               <button
                 type="submit"
+                value="search"
                 class="btn btn-light search-button shadow-lg p-3 mb-5 bg-body rounded"
               >
                 Search
