--- a/final_project_plus/index.html
+++ b/final_project_plus/index.html
@@ -138,61 +138,7 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="row week-weather">
-          <div class="col-2" id="day1">
-            Monday
-
-            <div class="week-stiker">
-              <img
-                src="img/rain_light.png"
-                alt="Rain light icon"
-                width="60px"
-              />
-            </div>
-           <div class="weather-forecast-temperature">
-              <span class="temperature-max">16 &#176; </span>
-            <span class="temperature-min">12 &#176;</span>
-           </div>
-          </div>
-           <!-- 
-          <div class="col-2">
-            Thusday
-            <h5>15 &#176;</h5>
-            <div class="week-stiker">
-              <img src="img/cloudy.png" alt="Cloudy icon" width="60px" />
-            </div>
-          </div>
-          <div class="col-2">
-            Wednesday
-            <h5>-10 &#176;</h5>
-            <img src="img/rain.png" alt="Rain icon" width="60px" />
-          </div>
-          <div class="col-2">
-            Thursday
-            <h5>20 &#176;</h5>
-            <img
-              src="img/partly_cloudy.png"
-              alt="Partly cloudy icon"
-              width="60px"
-            />
-          </div>
-          <div class="col-2">
-            Friday
-            <h5>18 &#176;</h5>
-            <img
-              src="img/showers_with_thunderstorms.png"
-              alt="Showers with thunderstorms icon"
-              width="60px"
-            />
-          </div>
-         <div class="col-2">
-            Saturday
-            <h5>18 &#176;</h5>
-            <img src="img/partly_cloudy.png" alt="sun" width="60px" />
-          </div> -->
-        </div>
-      </section>
+      <section class="weather-forecast" id="forecast"></section>
       <footer class="footer-container">
         <span
           >This project was coded by
