Added cities in nav menu

--- a/final_project_plus/index.html
+++ b/final_project_plus/index.html
@@ -32,10 +32,12 @@
       <header class="header-container">
         <ul class="nav-menu">
           <li>
-            <a href="#" class="nav-cities" id="nav-city-1">Mariupol</a>
+            <a href="#" class="nav-cities" id="nav-city-1" data-city="Mariupol"
+              >Mariupol</a
+            >
           </li>
           <li>
-            <a href="#" class="nav-cities">Kyiv</a>
+            <a href="#" class="nav-cities" data-city="Kyiv">Kyiv</a>
           </li>
           <li>
             <a href="#" class="nav-cities">Polohy</a>
