Edited cities in nav-menu

--- a/final_project_plus/index.html
+++ b/final_project_plus/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Weather</title>
+
     <!-- CSS only -->
     <!-- &#176;  -->
     <link
@@ -37,20 +38,20 @@
             >
           </li>
           <li>
-            <a href="#" class="nav-cities" data-city="Kyiv">Kyiv</a>
+            <a href="#" class="nav-cities" data-city="Kyiv">Olenivka</a>
+          </li>
+          <li>
+            <a href="#" class="nav-cities"> Bucha </a>
+          </li>
+
+          <li>
+            <a href="#" class="nav-cities">Energodar </a>
           </li>
           <li>
             <a href="#" class="nav-cities">Polohy</a>
           </li>
-
           <li>
-            <a href="#" class="nav-cities">Zaporizhzhya</a>
-          </li>
-          <li>
-            <a href="#" class="nav-cities">Lviv</a>
-          </li>
-          <li>
-            <a href="#" class="nav-cities">Dniprorudne</a>
+            <a href="#" class="nav-cities">Vasylivka</a>
           </li>
         </ul>
       </header>
