--- a/final_project_plus/index.html
+++ b/final_project_plus/index.html
@@ -48,7 +48,7 @@
             <a href="#" class="nav-cities">Energodar </a>
           </li>
           <li>
-            <a href="#" class="nav-cities">Polohy</a>
+            <a href="#" class="nav-cities">Nikopol</a>
           </li>
           <li>
             <a href="#" class="nav-cities">Vasylivka</a>
